@@ -1,5 +1,5 @@
 # ShadowServants Brute [SSBrute]
-Brute for shadowservants, Python
 
-The author is not responsible for the use of scripts for illegal purposes.
+The author is not responsible for the use of scripts for illegal purposes.  
+
 The purpose of scripts is to teach users how to work with threads and the right POST-requests to the server, so that later they write API for shadowservants.ru .
