@@ -1,14 +1,17 @@
 import sys
 import time
+from ConsoleWorker import ConsoleWorker
 
 
-class preview(object):
+class Preview(object):
     def do():
-        print('[SSBrute] v.1.2')
+        CLSWork = ConsoleWorker()
+        CLSWork.ClearConsole()
+        print('[SSBrute] v.1.3')
         corp = 'by icYFTL\n\n'
 
         for i in range(len(corp)):
-            if (corp[i].isalpha() or corp[i - 1].isalpha() and i != 0):
+            if corp[i].isalpha() or corp[i - 1].isalpha() and i != 0:
                 sys.stdout.write(corp[i])
                 sys.stdout.flush()
                 time.sleep(0.2)
