@@ -1,9 +1,5 @@
 class ThreadStatic:
-    def __init__(self):
-        self.Done = False
+    Done = False
 
-    def Status (self):
-        return self.Done
-
-    def Stop (self):
-        self.Done = True
+    def Assert(self):
+        Done = True
